--- a/src/components/navBar/navbar.css
+++ b/src/components/navBar/navbar.css
@@ -6,7 +6,7 @@
     padding-top: 1rem;
     padding-bottom: 1rem;
     justify-content: space-between;
-    
+
 }
 
 .navBar__logo {
@@ -15,7 +15,66 @@
     margin: -2rem;
 }
 
-.navBar__leftSide {
+.navBar__tabContent {
+    width:820px;
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.navBar__tabContent-searchFields {
+    width:800px;
+    background-color: white;
+    height:65px;
+    border-radius: 100px;
+    display: flex;
+    justify-content: space-evenly;
+    align-items: center;
+}
+
+.inputs {
+    font-size: 12px;
+    font-weight:bold;
+    margin-top: 10px;
+    width:90px;
+    align-items: center;
+}
+
+
+.vl {
+    position: relative;
+    top:15;
+    height: 20%;
+    background-color: rgb(228, 228, 228);
+    width: 1.5px;
+    margin-right: 20px;
+    padding-bottom: 15px;
+}
+
+
+
+
+.navBar__rigthSide {
     display: flex;
     flex-direction: row;
+    margin: 0.5rem 3rem 3rem 0;
+    align-items: center;
+}
+
+.navBar__host {
+    color:#338099;
+    font-weight: 500;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap:35px;
+    font-size: 16px;
+    width: 10rem;
+    height: 2.5rem;
+    border-radius: 100px;
+    cursor:pointer;
+}
+
+.navBar__host:hover {
+    background-color: #f0f7fa;
 }
