--- a/src/App.css
+++ b/src/App.css
@@ -15,3 +15,34 @@
     background-position: center;
 
 }
+
+/* Location picker*/
+.sc-bPyhqo{
+    border: 0px !important;
+    padding-left: 0px !important;
+    padding-top: 3px !important;
+    padding-bottom: 3px !important;
+    height: 30px !important;
+    width: 90px !important;
+    font-size: 14px !important;
+}
+
+/* Location box */
+.sc-eEOqmf{
+    width: 25rem !important;
+}
+
+/* Set the ...*/
+.sc-yeoIj {
+    margin: 5px 0 5px 5px !important;
+}
+.sc-bPyhqo {
+    margin-right: -5px !important;
+}
+
+/*Erase the arrow */
+.sc-ESujJ {
+    display: none !important;
+}
+
+/*End of Location Picker*/
