--- a/src/App.local.css
+++ b/src/App.local.css
@@ -9,7 +9,7 @@
 
 /*PICKER*/
 /* 1.- Location picker*/
-.sc-efBctP{
+.sc-bPyhqo{
     border: 0px !important;
     padding-left: 0px !important;
     padding-top: 3px !important;
@@ -20,24 +20,24 @@
 }
 
 /* Location box */
-.sc-kgUAyh{
+.sc-eEOqmf{
     width: 25rem !important;
 }
 
 
-.sc- {
+.sc-bPyhqo {
     margin-right: -5px !important;
 }
 
 /*Erase the arrow */
-.sc-EjJ {
+.sc-ESujJ {
     display: none !important;
 }
 
 /*1.- End of Location Picker*/
 
 /*2.- Dates */
-.sc-jIZahH {
+.sc-HzFiz {
     outline: 0px !important;
     padding-left: 0px !important;
     padding-top: 3px !important;
