--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 
 /*PICKER*/
 /* 1.- Location picker*/
-.sc-dPyBCJ {
+.sc-bPyhqo{
     border: 0px !important;
     padding-left: 0px !important;
     padding-top: 3px !important;
@@ -20,17 +20,17 @@
 }
 
 /*Erase the arrow */
-.sc-cOFTSb {
+.sc-ESujJ {
     display: none !important;
 }
 
 /* Location box */
-.sc-kgUAyh{
+.sc-eEOqmf{
     width: 25rem !important;
 }
 
 
-.sc- {
+.sc-bPyhqo {
     margin-right: -5px !important;
 }
 
@@ -39,7 +39,7 @@
 /*1.- End of Location Picker*/
 
 /*2.- Dates */
-.sc-jIZahH {
+.sc-HzFiz {
     outline: 0px !important;
     padding-left: 0px !important;
     padding-top: 3px !important;
