--- a/src/components/navBar/navbar.css
+++ b/src/components/navBar/navbar.css
@@ -86,10 +86,15 @@
     height: 2.5rem;
     border-radius: 100px;
     cursor:pointer;
+    text-decoration:none;
 }
 
 .navBar__host:hover {
     background-color: #f0f7fa;
+}
+
+.link{
+    text-decoration:none;
 }
 
 .searchButton {
